--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,10 @@
 }
 
 #site-search {
-  padding: 10px;
+  padding: 15px;
   margin-top: 30px;
   margin-bottom: 30px;
-  width: 50%;
+  width: 35%;
   border-radius: 5px;
   border: 1px solid lightgrey;
 }
@@ -21,7 +21,9 @@
 }
 
 .search-bar {
-  margin-left: 70px;
+  display: flex;
+
+  justify-content: center;
 }
 
 .image {
