--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   padding: 15px;
   margin-top: 30px;
   margin-bottom: 30px;
-  width: 35%;
+  width: 75%;
   border-radius: 5px;
   border: 1px solid lightgrey;
 }
@@ -23,7 +23,7 @@
 .search-bar {
   display: flex;
   justify-content: center;
-  margin-right: 200px;
+  margin-right: 100px;
 }
 
 .image {
@@ -35,7 +35,7 @@
   max-width: 1000px;
   display: grid;
   margin: auto;
-  grid-template-columns: repeat(4, minmax(200px, 200px));
-  grid-gap: 20px;
-  align-items: center;
+  grid-template-columns: repeat(4, minmax(200px, auto));
+  grid-gap: 15px;
+  justify-items: center;
 }
